[project]
name = "snap-html"
version = "0.3.0"
description = "a robust, modern and high performance Python library for generating image from a html string/html file/url build on top of `playwright`"
authors = [{ name = "codustry", email = "hello@codustry.com" }]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.3.2",
    "rich>=9.8.2",
    "playwright",
    "furl>=2.1.0",
    "pint>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/codustry/snap-html"
Repository = "https://github.com/codustry/snap-html"

[project.scripts]
snap-html = "snap_html.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=6.2.1", "pytest-asyncio>=0.20.3", "pytest-cov>=4.1.0"]

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.pytest.ini_options]
markers = ["asyncio: mark test as async test"]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
